<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/QuizView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/QuizTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2title" />

        <TextView
            style="@style/QuizDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2" />

        <LinearLayout
            style="@style/QuizAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/q2a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a1" />

            <CheckBox
                android:id="@+id/q2a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a2" />

            <CheckBox
                android:id="@+id/q2a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a3" />

            <CheckBox
                android:id="@+id/q2a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a4" />

        </LinearLayout>

        <Button
            android:id="@+id/btnQ2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNext" />
    </LinearLayout>

</ScrollView>