<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amyunus.iakquizapp.MainActivity">

    <LinearLayout
        style="@style/QuizView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/QuizTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1title" />

        <TextView
            style="@style/QuizDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/android" />

        <RadioGroup
            style="@style/QuizAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/q1a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a1" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/q1a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a2" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/q1a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a3" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/q1a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a4" />

        </RadioGroup>

        <Button
            android:id="@+id/btnQ1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNext" />
    </LinearLayout>

</ScrollView>
