<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/QuizView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/QuizTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3title" />

        <TextView
            style="@style/QuizDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3" />

        <EditText
            android:id="@+id/q3a"
            style="@style/QuizAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnQ3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNext" />

    </LinearLayout>

</ScrollView>